Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.11, 11.2(EOL), 11.4, 11.6(EOL), 11.7(EOL)
Description
INSTALL PLUGIN Spider SONAME 'ha_spider.so'; |
CREATE SERVER s FOREIGN DATA WRAPPER mysql OPTIONS(HOST '1'); |
CREATE TABLE t(c INT)ENGINE=Spider COMMENT='WRAPPER "mysql",SRV "s",TABLE "foo"'; |
INSERT INTO t VALUES(1); # ERROR 1429 (HY000): Unable to connect to foreign data source: s |
INSERT INTO t VALUES(1); # Hangs |
Will thread-hang in 'Update' state on the second INSERT.
|
CS 11.2.6 e91a79945822def1452787f825e6047c6a64dbd9 (Debug) |
11.2.6-dbg>SHOW PROCESSLIST;
|
+----+-------------+-----------+------+---------+------+----------------------------------------------------+-------------------------+----------+
|
| Id | User | Host | db | Command | Time | State | Info | Progress |
|
+----+-------------+-----------+------+---------+------+----------------------------------------------------+-------------------------+----------+
|
| 4 | root | localhost | test | Query | 2003 | Update | INSERT INTO t VALUES(1) | 0.000 |
|
| 5 | system user | | NULL | Daemon | NULL | Spider table background statistics action handler | NULL | 0.000 |
|
| 6 | system user | | NULL | Daemon | NULL | Spider table background cardinality action handler | NULL | 0.000 |
|
| 9 | root | localhost | test | Query | 0 | starting | SHOW PROCESSLIST | 0.000 |
|
+----+-------------+-----------+------+---------+------+----------------------------------------------------+-------------------------+----------+
|
4 rows in set (0.000 sec)
|
Bug confirmed in 10.5 opt, 11.2 dbg and 11.7 opt - deemed to be present in all versions/build types.
Attachments
Issue Links
- relates to
-
MDEV-27925
Deprecate spider_connect_retry_count and spider_connect_retry_interval
-
- Open
-
-
MDEV-29214 ASAN errors in federatedx_txn::txn_commit (or txn_rollback), assertion `server->io_count == 0' failure
-
- Confirmed
-
-
MDEV-29704 Thread hang in 'Waiting for table metadata lock' on CREATE TABLE
-
- Open
-
-
MDEV-30012 Triple thread hang in states 'NULL', 'NULL' and 'closing tables' on INSERT
-
- Open
-