MDEV-35064 Reduce the default spider connect retry counts to 2

The existing default value 1000 is too big and could result in
"hanging" when failing to connect a remote server. Three tries in
total is a more sensible default.